Make Dockerfile multi-stage build
Made the docker build multi-stage so that the NER service can be built for use inside the final image.
Also added an entry-point script to run the two services side-by-side: may use pebble for this later.